--- a/Croatian/main/MiDrive.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiDrive.apk/res/values-hr/strings.xml
@@ -1,8 +1,8 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="abc_action_bar_home_description">Idi na početnu</string>
-  <string name="abc_action_bar_up_description">Idi gore</string>
-  <string name="abc_action_menu_overflow_description">Dodatne opcije</string>
+  <string name="abc_action_bar_up_description">Natrag</string>
+  <string name="abc_action_menu_overflow_description">Više opcija</string>
   <string name="abc_action_mode_done">Gotovo</string>
   <string name="abc_activity_chooser_view_see_all">Prikaži sve</string>
   <string name="abc_activitychooserview_choose_application">Odabir aplikacije</string>
@@ -21,10 +21,10 @@
   <string name="abc_search_hint">Pretražite…</string>
   <string name="abc_searchview_description_clear">Izbriši upit</string>
   <string name="abc_searchview_description_query">Upit za pretraživanje</string>
-  <string name="abc_searchview_description_search">Pretraživanje</string>
+  <string name="abc_searchview_description_search">Pretraži</string>
   <string name="abc_searchview_description_submit">Pošalji upit</string>
   <string name="abc_searchview_description_voice">Glasovno pretraživanje</string>
-  <string name="abc_shareactionprovider_share_with">Dijeljenje sa</string>
+  <string name="abc_shareactionprovider_share_with">Dijeli s</string>
   <string name="abc_shareactionprovider_share_with_application">Dijeli putem aplikacije %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
   <string name="about_title">O aplikaciji</string>
@@ -37,27 +37,27 @@
   <string name="account_bind_secure_phone_title">Dodaj broj telefona</string>
   <string name="account_change_message">"Mjenjate na račun %1$s. Vidjet ćete Mi Drive podatke koji su povezani s ovim računom."</string>
   <string name="account_change_title">Promjena računa</string>
-  <string name="account_crop_user_avatar">Obreži sliku</string>
-  <string name="account_empty_user_name">Unesite naziv kor. imena vašeg Xiaomi Računa</string>
-  <string name="account_error_all_space_user_name">"Naziv ne može biti prazan bez znakova"</string>
-  <string name="account_error_invalid_user_name">"Naziv ne može sadržavati &lt;, &gt;, /"</string>
-  <string name="account_error_longer_user_name">"Naziv ne može biti duže od 20 znakova"</string>
-  <string name="account_error_shorter_user_name">Naziv mora biti duže od 2 znaka</string>
-  <string name="account_error_user_birthday">Rođendan koji ste unijeli nije važeći</string>
-  <string name="account_error_user_name">Ime koje ste unijeli nije važeće</string>
+  <string name="account_crop_user_avatar">Obreži fotografiju</string>
+  <string name="account_empty_user_name">Unesite korisničko ime za Mi račun</string>
+  <string name="account_error_all_space_user_name">"Korisničko ime ne smije sadržavati samo razmake"</string>
+  <string name="account_error_invalid_user_name">"Ime ne smije sadržavati &lt;, > ili /"</string>
+  <string name="account_error_longer_user_name">"Ime ne smije biti dulje od 20 znakova"</string>
+  <string name="account_error_shorter_user_name">Ime mora biti dulje od 2 znaka</string>
+  <string name="account_error_user_birthday">Uneseni rođendan nije valjan</string>
+  <string name="account_error_user_name">Nadimak nije valjan. Pokušajte s drugom.</string>
   <string name="account_info_desc">Upravljanje podacima o računu</string>
-  <string name="account_invalid_user_avatar">Ova je fotografija nevažeća. Probajte neku drugu.</string>
-  <string name="account_limit_update_birthday">"Ne mogu sada ažurirati datum rođendana"</string>
+  <string name="account_invalid_user_avatar">Ova fotografija nije valjana. Pokušajte s drugim.</string>
+  <string name="account_limit_update_birthday">"Trenutno nije moguće ažurirati rođendan"</string>
   <string name="account_logout">Izlaz iz računa “%1$s”</string>
   <string name="account_no_set">Ništa</string>
   <string name="account_none_bind_info">Ništa</string>
   <string name="account_none_user_name">Ništa</string>
-  <string name="account_secure_info_pref_title">Info o računu</string>
-  <string name="account_security_info_pref_title">Informacije o sigurnosti</string>
-  <string name="account_user_avatar">Fotografija profila</string>
-  <string name="account_user_avatar_from_album">Odaberi fotografiju</string>
-  <string name="account_user_avatar_from_camera">Snimi fotografiju</string>
-  <string name="account_user_base_info">Osobni podaci</string>
+  <string name="account_secure_info_pref_title">Podaci o računu</string>
+  <string name="account_security_info_pref_title">Sigurnosni podaci</string>
+  <string name="account_user_avatar">Profilna fotografija</string>
+  <string name="account_user_avatar_from_album">Odaberite iz galerije</string>
+  <string name="account_user_avatar_from_camera">Kamera</string>
+  <string name="account_user_base_info">Osnovni podaci</string>
   <string name="account_user_birthday">Rođendan</string>
   <string name="account_user_details">Osobne informacije</string>
   <string name="account_user_email">E-pošta</string>
