--- a/Croatian/main/MiuiExtraPhoto.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiExtraPhoto.apk/res/values-hr/strings.xml
@@ -194,6 +194,7 @@
   <string name="operation_original">Usporedi</string>
   <string name="operation_redo">Ponovi</string>
   <string name="operation_undo">Poništi</string>
+  <string name="refocus_close">Isključeno</string>
   <string name="refocus_discard_confirm_message">Spremiti promjene?</string>
   <string name="refocus_discard_negative_btn">Odbaci</string>
   <string name="refocus_discard_positive_btn">Spremi</string>
