--- a/Croatian/main/Mms.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Mms.apk/res/values-hr/strings.xml
@@ -150,6 +150,27 @@ Pokušajte ponovno."</string>
   <string name="batch_deleting_progress_message">Brisanje odabranih niti poruke(a)</string>
   <string name="bcc_label">"Bcc: "</string>
   <string name="billing">Računi</string>
+  <string name="beidou_cannot_receive_airmode">Isključite zrakoplovni način za primanje poruka</string>
+  <string name="beidou_cannot_send_mms">"BeiDou satelitska komunikacija ne podržava MMS"</string>
+  <string name="beidou_cannot_use">Isključite Tiantong satelitsku komunikaciju i pokušajte ponovno</string>
+  <string name="beidou_exceed_send_limit">"Ne mogu slati više poruka ovaj mjesec"</string>
+  <string name="beidou_exceed_words_limit">Izbrišite neke znakove da biste mogli slati</string>
+  <string name="beidou_from_contacts">Odgovor od %s</string>
+  <string name="beidou_identification_fail_receive">"Nije moguće provjeriti autentičnost. Ne mogu primati poruke putem BeiDoua."</string>
+  <string name="beidou_identification_fail_send">"Nije moguće provjeriti autentičnost. Ne mogu slati poruke putem BeiDou."</string>
+  <string name="beidou_introduce">Saznajte više o Beidou satelitskoj komunikaciji</string>
+  <string name="beidou_location_failed">"Nije moguće dobiti lokaciju. Idite na otvoreno područje i pokušajte ponovno."</string>
+  <string name="beidou_max_support_contact_number">Dodajte do %d kontakata</string>
+  <string name="beidou_message">Beidou satelitska komunikacija</string>
+  <string name="beidou_new_message">Pošalji</string>
+  <string name="beidou_open_location_service">Beidou satelitska komunikacija treba dopuštenje za pristup vašoj lokaciji kako bi normalno funkcionirala.</string>
+  <string name="beidou_query_remain_time">Provjeri stanje</string>
+  <string name="beidou_query_remain_time_failed">"Nije moguće provjeriti stanje"</string>
+  <string name="beidou_receive_message">Primi</string>
+  <string name="beidou_satellite_sms_notification">Ova je poruka poslana putem Beidou satelitske komunikacije</string>
+  <string name="beidou_sim_not_support">"SIM kartica ne podržava Beidou satelitske poruke"</string>
+  <string name="beidou_support_cta_tips">Ova aplikacija također može čitati, uređivati, slati i primati Beidou satelitske poruke.</string>
+  <string name="beidou_to_contacts">Primatelj: %s</string>
   <string name="block_messaging_entry_title">Blokirani SMS-ovi</string>
   <string name="block_number_message">Taj će broj telefona biti dodan na popis za blokiranje. Sve poruke poslane s ovog broja bit će blokirane.</string>
   <string name="block_support_text">Podržano od strane Antiy.</string>
