--- a/Croatian/main/SecurityCenter.apk/res/values-hr/strings.xml
+++ b/Croatian/main/SecurityCenter.apk/res/values-hr/strings.xml
@@ -4537,16 +4537,16 @@ Ova aktivnost skraćuje trajanje baterije."</string>
   <string name="pc_fast_charge_notifi_power_threshold_title">Postavite razinu napunjenosti baterije za podsjetnike</string>
   <string name="pc_fast_charge_notifi_summary">Punjenje do %s brže nego inače…</string>
   <string name="pc_fast_charge_notifi_summary_on">Brzina punjenja se povećava kada je zaslon isključen. Vaš uređaj će se zagrijati.</string>
-  <string name="pc_fast_charge_notifi_switch_summary">Obavijestite o povećanju brzine punjenja kada je isporučeni punjač %dW priključen i baterija je ispod zadane razine</string>
-  <string name="pc_fast_charge_notifi_switch_title">Obavijesti o povečavanju</string>
+  <string name="pc_fast_charge_notifi_switch_summary">Obavijesti o povećanju brzine punjenja kada je isporučeni punjač %dW priključen i baterija je ispod zadane razine</string>
+  <string name="pc_fast_charge_notifi_switch_title">Obavijesti o povećanoj brzini punjenja</string>
   <string name="pc_fast_charge_notifi_title">%dW punjenje</string>
-  <string name="pc_fast_charge_notifi_title_on">Zaustavi povećavati brzinu punjenja</string>
+  <string name="pc_fast_charge_notifi_title_on">Zaustavi povećanu brzinu punjenja</string>
   <string name="pc_fast_charge_switch_summary">"Uključite kako biste ubrzali proces punjenja. HyperOS će dati prednost brzini punjenja i pritom osigurati sigurnost vašeg uređaja. Što je baterija praznija, brže će se puniti. Ova značajka može zagrijati vaš uređaj."</string>
   <string name="pc_fast_charge_switch_summary_new">Podsjeti da povećate brzinu punjenja kada je priključen isporučeni punjač i baterija padne ispod zadane razine</string>
-  <string name="pc_fast_charge_switch_title">Povećajte brzinu punjenja</string>
+  <string name="pc_fast_charge_switch_title">Povećaj brzinu punjenja</string>
   <string name="pc_fast_charge_switch_toast_message">Promjene će se primijeniti prilikom sljedećeg punjenja ovog uređaja</string>
   <string name="pc_fast_charge_temp_remider">"Uključite za automatsku regulaciju brzine punjenja. Ova značajka radi samo s punjačima koje isporučuje Xiaomi. Vaš bi se uređaj mogao zagrijati tijekom punjenja."</string>
-  <string name="pc_fast_charge_title">Povećajte brzinu punjenja</string>
+  <string name="pc_fast_charge_title">Povećaj brzinu punjenja</string>
   <string name="pc_first_use_error_tips">Izračun</string>
   <string name="pc_first_use_protect_title">Prvo korištenje</string>
   <string name="pc_going_to_exit_extreme_mode">Izlazak iz načina hibernacije</string>
