--- a/Croatian/main/Notes.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Notes.apk/res/values-hr/strings.xml
@@ -27,6 +27,8 @@
   <string name="abc_shareactionprovider_share_with">Dijeli s</string>
   <string name="abc_shareactionprovider_share_with_application">Dijeli putem aplikacije %s</string>
   <string name="abc_toolbar_collapse_description">Sažmi</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string> <string name="accessibility_sliding_button_state_description_on">Uključeno</string> <string name="accessibility_tab_state_description_unselect">Nije odabrano</string> 
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="access_denied_info">Previše pokušaja. Pričekajte minutu ili dvije i pokušajte ponovno.</string>
   <string name="access_photos_and_videos">Pristup fotografijama i videozapisima</string>
   <string name="action_collapse">Sakrij</string>
@@ -51,6 +53,7 @@
   <string name="add_pic_excerpt_summary">Dodajte sažetak slike</string>
   <string name="add_text_excerpt_summary">Dodaj tekstualni sažetak</string>
   <string name="added_to_clipboard">Uspješno kopirano</string>
+  <string name="add_to_clip_toast">Uspješno kopirano</string>
   <string name="add_modifications">Prijedlog: Dodajte \"%1$s\"</string>
   <string name="adopt">Koristite</string>
   <string name="ai_already_copy_toast_text">Uspješno kopirano</string>
@@ -66,6 +69,7 @@
   <string name="ai_generate_stop_button">Zaustavi</string>
   <string name="ai_generating_check">Lektura teksta…</string>
   <string name="ai_generating_title">Generiranje…</string>
+  <string name="ai_generating_stop_check">Zaustavi</string>
   <string name="ai_insert_original_text">Umetni original</string>
   <string name="ai_invitation_text_agree">Prihvaćam</string>
   <string name="ai_invitation_text_disagree">"Ne prihvaćam"</string>
@@ -171,6 +175,7 @@
   <string name="audio_toast_file_undownload">Audio datoteka nije potpuno preuzeta ili nedostaje</string>
   <string name="audio_toast_network_is_not_available">"Ne mogu se povezati na mrežu"</string>
   <string name="auto_detected">Automatsko otkrivanje</string>
+  <string name="auto_optimize_handwriting_text">Automatska optimizacija rukopisa</string>
   <string name="blackboard_note">Pametna ploča</string>
   <string name="bottomsheet_action_collapse">Sažmi donji list</string>
   <string name="bottomsheet_action_expand">Proširi donji list</string>
@@ -238,6 +243,7 @@
   <string name="character_counter_overflowed_content_description">Prekoračeno je ograničenje broja znakova %1$d od %2$d</string>
   <string name="check_in_todo_app">Prikaži zadatke</string>
   <string name="chip_text">Chip tekst</string>
+  <string name="chemical_formula_trim">Jednadžba ravnoteže</string>
   <string name="clear_text_end_icon_content_description">Izbriši tekst</string>
   <string name="clearable_edittext_clear_description">Izbriši</string>
   <string name="clip_resource_deleted">Ova stavka više nije dostupna</string>
@@ -249,12 +255,49 @@
   <string name="cloud_trash_bin_title">Izbriši bilješke u Xiaomi Cloudu</string>
   <string name="color_pick_board_talkback">Tabela boja</string>
   <string name="color_pick_talkback">Redak %1$d, stupac %2$d</string>
+  <string name="color_picker_popup_straw_talkback">Alat kapaljka</string>
   <string name="confirm_cancel">"Ne prihvaćam"</string>
   <string name="confirm_ok">Prihvaćam</string>
   <string name="continuous_default_hint">Kopirajte tekst, spremajte slike i snimke zaslona kao isječke</string>
   <string name="continuous_new_excerpt_title">Novi isječak</string>
   <string name="copy">Kopiraj</string>
   <string name="copy_toast_text">Uspješno kopirano</string>
+  <string name="creation_color_picker_popup_tab_grid">Mreža</string>
+  <string name="creation_color_picker_popup_tab_slider">Klizač</string>
+  <string name="creation_color_picker_screenshot_fail_toast">"Alat kapaljka se ne može koristiti na ovoj stranici"</string>
+  <string name="creation_color_picker_view_page_text_hue">Nijansa</string>
+  <string name="creation_color_picker_view_page_text_lightness">Svjetlina</string>
+  <string name="creation_color_picker_view_page_text_saturation">Zasićenost</string>
+  <string name="creation_edit_limit_dialog_cancel">Otkaži</string>
+  <string name="creation_eraser_pixel">Piksel</string>
+  <string name="creation_eraser_size">Veličina gumice</string>
+  <string name="creation_eraser_stroke">Crtanje</string>
+  <string name="creation_more_tool_add_text">Umetni tekstualni okvir</string>
+  <string name="creation_more_tool_clear_content">Očisti stranicu</string>
+  <string name="creation_more_tool_delete_page">Izbriši stranicu</string>
+  <string name="creation_more_tool_delete_page_message">"Ova se stranica ne može vratiti nakon brisanja. Želite li svejedno izbrisati?"</string>
+  <string name="creation_more_tool_finger_undo">Dodirnite s dva prsta za poništavanje</string>
+  <string name="creation_more_tool_finger_write">Crtanje prstom</string>
+  <string name="creation_more_tool_insert_pic">Umetanje slike</string>
+  <string name="creation_more_tool_pencil_hotkey">Tipke prečaca olovke</string>
+  <string name="creation_pen_sensitivity">Osjetljivost na pritisak</string>
+  <string name="creation_pen_text_transparent">Neprozirnost</string>
+  <string name="creation_pen_thickness">Debljina kista</string>
+  <string name="creation_pen_tip_size">Veličina kista</string>
+  <string name="creation_pencil_sensitivity">Osjetljivost na kut</string>
+  <string name="creation_ppw_select_delete">Izbriši</string>
+  <string name="creation_ppw_select_paste">Zalijepi</string>
+  <string name="creation_ppw_select_pasteBeauty">Zalijepi kao rukopis</string>
+  <string name="creation_ppw_shortcut_long_click">Pritisni i drž</string>
+  <string name="creation_ppw_shortcut_pk_long_click_tip">Prebaci na gumicu, drž za brisanje</string>
+  <string name="creation_ppw_shortcut_pk_single_click_tip">Promijeni kist</string>
+  <string name="creation_ppw_shortcut_primary_key">Gumb za pisanje</string>
+  <string name="creation_ppw_shortcut_secondary_key">Gumb za snimku zaslona</string>
+  <string name="creation_ppw_shortcut_single_click">Pritisni</string> <string name="creation_ppw_shortcut_sk_single_click_tip">Prebaci na nedavno korištenu boju</string>
+  <string name="creation_setting_select_background">Odaberi pozadinu</string>
+  <string name="creation_tool_color_center_talkback">Boja %d</string>
+  <string name="creation_tool_color_left_talkback">Boja %d</string>
+  <string name="creation_tool_color_right_talkback">Boja %d</string>
   <string name="cta_agree_desc">Dopustite ovoj aplikaciji da se poveže s internetom i dodijelite neobavezna dopuštenja kako bi mogla koristiti sve njegove značajke.</string>
   <string name="cta_confirm_cancel">"Odustani"</string>
   <string name="cta_confirm_ok">Dopusti</string>
@@ -281,6 +324,9 @@
   <string name="db_downgrade_clear_date_reminder">"Prebacivanje na drugu HyperOS verziju zahtijeva brisanje podataka aplikacije Bilješke. Prije nego što to učinite, provjerite jeste li napravili Sig. kopiju na Xiaomi Cloud."</string>
   <string name="default_folder_name">"Mapa bez naziva"</string>
   <string name="default_update_documents">Dostupno je ažuriranje. Ažurirati sada?</string>
+  <string name="desc_paper_black_talkback">Crna</string>
+  <string name="desc_paper_white_talkback">Bijela</string>
+  <string name="desc_paper_yellow_talkback">Žuta</string>
   <string name="delete_folder_dialog_tile">Izbriši mapu</string>
   <string name="dialog_button_cancel">Odustani</string>
   <string name="dialog_button_close">Zatvori</string>
@@ -334,6 +380,7 @@
   <string name="doodle_brush_pen">Olovka</string>
   <string name="doodle_brush_pencil">Kemijska</string>
   <string name="doodle_brush_watercolor">Marker</string>
+  <string name="doodle_color_picker_bar">Klizač za odabir boja: Dvaput kliknite, dugo pritisnite i prijeđite prstom za odabir boja</string>
   <string name="doodle_color_pick_black_talkback">Crna</string>
   <string name="doodle_color_pick_blue_talkback">Plava</string>
   <string name="doodle_color_pick_green_blue_talkback">Plavo-zelena</string>
@@ -381,6 +428,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="enable_sync">Sinkroniziraj</string>
   <string name="enable_sync_desc">Sinkronizirati vaše bilješke s vašim Xiaomi računom (%1$s)?</string>
   <string name="enter_content">Prvo unesite sadržaj</string>
+  <string name="error_a11y_label">Pogreška: nevažeće</string>
   <string name="error_contact_not_exist">"Kontakt ne postoji"</string>
   <string name="error_hide_empty_note">"Ne mogu sakriti praznu bilješku"</string>
   <string name="error_icon_content_description">Pogreška</string>
@@ -412,6 +460,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="excerpted_to_note">Isječak spremljen u Bilješke</string>
   <string name="excerpting">Izrada izvoda…</string>
   <string name="expand_button_title">Napredno</string>
+  <string name="export_select_empty">Odaberite barem jednu stranicu</string>
   <string name="exposed_dropdown_menu_content_description">Prikaži padajući izbornik</string>
   <string name="external_share_to_note">%1$s je podijeljen s Bilješkama</string>
   <string name="first_enter_custom_folder_hint">Ovdje možete preimenovati ili brisati mape</string>
@@ -449,6 +498,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="hand_write_syncing">Sinkroniziranje…</string>
   <string name="hand_write_syncing_phone">Sinkroniziranje…</string>
   <string name="handwrite_description">Rukom napisana bilješka</string>
+  <string name="handwrite_description_window">Prozor za rukopis</string>
   <string name="hear_note">Diktirane bilješke</string>
   <string name="hidden_notes_fragment_title">Skrivene bilješke</string>
   <string name="hide_arrow_description">Sakrij</string>
@@ -485,6 +535,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="insert_image_size_limit_tip">"Ova je slika veća od %d MB. Automatski je komprimirana."</string>
   <string name="item_view_role_description">Kartica</string>
   <string name="last_excerpt_unfinish_hint">Najnoviji isječak je nepotpun</string>
+  <string name="load_note_dialog">Samo trenutak…</string>
   <string name="loading_text">Samo trenutak…</string>
   <string name="login_sync">Prijavi se &amp; sinkr.</string>
   <string name="main_body">Cijeli tekst</string>
@@ -602,6 +653,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="miui_plus_app_state_description_view_todo">Prikaži zadatak</string>
   <string name="miui_plus_relay_waring_data_not_find">"Nije moguće pronaći stavku koju gledate na drugom uređaju. Provjerite jesu li sve stavke sinkronizirane."</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
   <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
@@ -639,6 +691,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="miuix_navigator_multiple_choice">Odaberi</string>
   <string name="miuix_navigator_navigator_switch_description">Sakrij bočnu traku</string>
   <string name="miuix_progressbar_loading">Samo trenutak…</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -690,6 +743,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="month_september_shortest">R</string>
   <string name="more">Više</string>
   <string name="mtrl_badge_numberless_content_description">Nova obavijest</string>
+  <string name="mtrl_picker_announce_current_range_selection">Odabir datuma početka: %1$s – Odabir datuma završetka: %2$s</string>
   <string name="mtrl_checkbox_state_description_checked">Označeno</string>
   <string name="mtrl_checkbox_state_description_indeterminate">Djelomično označeno</string>
   <string name="mtrl_checkbox_state_description_unchecked">Nije označeno</string>
@@ -733,6 +787,11 @@ Dodirnite + da napravite mapu"</string>
   <string name="mtrl_picker_toggle_to_year_selection">Dodirnite za prelazak na odabir godine</string>
   <string name="mtrl_timepicker_cancel">Odustani</string>
   <string name="mtrl_timepicker_confirm">U redu</string>
+  <string name="multi_page_add_new_page">Privucite prstom prema gore da biste dodali novu stranicu</string>
+  <string name="multi_page_max_limit_bitmap">"Ne mogu dodati više slika"</string>
+  <string name="multi_page_max_limit_text_toast">"Ne mogu dodati više tekstualnih okvira"</string>
+  <string name="multi_page_reach_max_page_count_toast">"Ne mogu dodati više stranica"</string>
+  <string name="multi_page_release_new_page">Otpustite da biste dodali novu stranicu</string>
   <string name="net_error">Došlo je do mrežne pogreške</string>
   <string name="network_error_info">Došlo je do mrežne pogreške. Provjerite mrežne postavke i pokušajte ponovno.</string>
   <string name="network_timeout_info">"Ne mogu se povezati s mrežom. Pokušajte ponovno."</string>
@@ -803,7 +862,8 @@ Dodirnite + da napravite mapu"</string>
   <string name="pad_insert_image_menu_take_photo_by_phone">"Kamera teleona"</string>
   <string name="pad_note_create_hint">Dodirnite tipku za stvaranje bilješke</string>
   <string name="pad_note_list_not_text_stub">Bez teksta</string>
-  <string name="pad_todo_create_hint">Dodajte zadatak task</string>
+  <string name="pad_todo_create_hint">Dodajte zadatak</string>
+  <string name="page_reach_max_point_count_toast">"Previše sadržaja na ovoj stranici. Ne možete uređivati."</string>
   <string name="password_toggle_content_description">Prikaži zaporku</string>
   <string name="paste_unsupported_data">"Ne mogu zalijepiti ovaj sadržaj"</string>
   <string name="pc_action_create_new_folder">Mapa</string>
@@ -924,6 +984,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="repeat_mode_set_title">Ponovi</string>
   <string name="repeat_mode_week">Svaki tjedan</string>
   <string name="repeat_mode_year">Svake godine</string>
+  <string name="request_alert_window_permission_toast">Dopustite ovoj aplikaciji prikaz stavki preko drugih aplikacija</string>
   <string name="retry">Pokušaj ponovno</string>
   <string name="revoke_modifications">Poništi</string>
   <string name="rich_text_bold_description">Bold</string>
@@ -955,6 +1016,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="saturday">Subota</string>
   <string name="saturday_short">Sub</string>
   <string name="saturday_shortest">S</string>
+  <string name="save_note_dialog">Spremanje…</string>
   <string name="save_single_excerpt">Spremi</string>
   <string name="save_to_gallery_failure_message">"Ne mogu spremiti"</string>
   <string name="save_to_gallery_icon_name">Spremi u Galeriju</string>
@@ -986,6 +1048,7 @@ Dodirnite + da napravite mapu"</string>
   <string name="setting_note_list_layout_title">Raspored</string>
   <string name="setting_other">OSTALO</string>
   <string name="setting_privacy">Pravila o privatnosti</string>
+  <string name="setting_show_dot_talkback">Točkasto</string>
   <string name="sina_share_fail">"Ne mogu poslati"</string>
   <string name="sina_share_fail_content_repeat">"Već ste podijelili ovo."</string>
   <string name="sina_share_pendding">Šaljem…</string>
@@ -1184,6 +1247,31 @@ Dopustite aplikaciji Bilješke snimanje zvuka."</string>
   <string name="todoalert_done">U redu</string>
   <string name="tomorrow">Sutra</string>
   <string name="tool_back_talkback">Natrag</string>
+  <string name="tool_ballpoint_talkback">Kemijska olovka</string>
+  <string name="tool_brush_stroke_talkback_1_5">Promjer kista 1</string> 
+  <string name="tool_brush_stroke_talkback_2_5">Promjer kista 2</string> 
+  <string name="tool_brush_stroke_talkback_3_5">Promjer kista 3</string> 
+  <string name="tool_brush_stroke_talkback_4_5">Promjer kista 4</string>
+  <string name="tool_brush_stroke_talkback_5_5">Promjer kista 5</string> 
+  <string name="tool_brush_talkback">"Odabrani kist: "</string> 
+  <string name="tool_color_select_talkback">"Trenutno odabrana boja: "</string>
+  <string name="tool_done_talkback">Spremi</string> 
+  <string name="tool_eraser_stroke_talkback_1_4">Promjer gumice 1</string> 
+  <string name="tool_eraser_stroke_talkback_2_4">Promjer gumice 2</string>
+  <string name="tool_eraser_stroke_talkback_3_4">Promjer gumice 3</string>
+  <string name="tool_eraser_stroke_talkback_4_4">Brisanje poteza</string> 
+  <string name="tool_eraser_talkback">Gumica</string>
+  <string name="tool_export">Izvoz</string> 
+  <string name="tool_highlighter_talkback">Marker</string> 
+  <string name="tool_ink_talkback">Nalivpero</string> 
+  <string name="tool_mark_talkback">Marker</string>
+  <string name="tool_more_talkback">Više značajki</string>
+  <string name="tool_pencil_talkback">Olovka</string> 
+  <string name="tool_rect_select_talkback">Alat za odabir</string>
+  <string name="tool_redo_talkback">Ponovi</string>
+  <string name="tool_ruler_talkback">Ravnalo</string>
+  <string name="tool_undo_talkback">Poništi</string>
+  <string name="tool_watercolor_talkback">Akvarelna olovka</string>
   <string name="toolbar_check_description">Dodaj potvrdni okvir</string>
   <string name="toolbar_delete_description">Izbriši ovu bilješku</string>
   <string name="toolbar_done_description">Gotovo</string>
