--- a/Croatian/main/SecurityAdd.apk/res/values-hr/strings.xml
+++ b/Croatian/main/SecurityAdd.apk/res/values-hr/strings.xml
@@ -271,6 +271,7 @@
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
   <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
@@ -503,6 +504,7 @@
   <string name="sys_freememory_title">Dostupno</string>
   <string name="sys_title_gamebooster_unit_gb">G</string>
   <string name="sys_title_gamebooster_unit_mb">M</string>
+  <string name="text_input_layout_default_error">Ovo je zadana pogreška</string>
   <string name="thursday">Četvrtak</string>
   <string name="thursday_short">Čet</string>
   <string name="thursday_shortest">Č</string>
