--- a/Croatian/main/MiAICR.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiAICR.apk/res/values-hr/strings.xml
@@ -46,6 +46,18 @@
   <string name="accessbility_permission_title">Preuzete aplikacije</string>
   <string name="accessbility_permission_toast_msg">"Uključite značajke pristupačnosti Xiaomi HyperAI Enginea da biste mogli izvršiti ovu radnju"</string>
   <string name="actionbar_button_up_description">Natrag</string>
+  <string name="aiSearch_buildDB_dialog_analysis_completed_progress_time">%1$s dovršeno</string>
+  <string name="aiSearch_buildDB_dialog_analysis_completed_progress_time_notice">%1$s dovršeno. Vaš se uređaj može zagrijati ili potrošiti malo više energije tijekom ovog procesa.</string>
+  <string name="aiSearch_buildDB_dialog_analysis_notice_five">Analiza će se nastaviti kada se uređaj ohladi i ima dovoljno energije</string>
+  <string name="aiSearch_buildDB_dialog_secondary_confirmation_content">Vaš se uređaj može zagrijati ili potrošiti malo više energije tijekom procesa analize. Želite li odmah započeti analizu?</string>
+  <string name="aiSearch_buildDB_dialog_secondary_tmp_confirmation_remarks">Na brzinu analize utjecat će aplikacije koje se izvode u prvom planu. Za bržu analizu, uređaj punite dok je zaslon isključen.</string>
+  <string name="aiSearch_buildDB_dialog_secondary_tmp_confirmation_remarks_zh">Na brzinu analize utjecat će aplikacije koje se izvode u prvom planu. Za bržu analizu, uređaj punite dok je zaslon isključen.</string>
+  <string name="aiSearch_support_service">Podržane usluge</string>
+  <string name="aiSearch_support_service_connect">Poveži se s Windowsima</string>
+  <string name="aiSearch_support_service_connect_computer">Poveži se s računalom i koristi AI pretraživanje kako bi dobio preciznije rezultate</string>
+  <string name="aiSearch_support_service_search">Pretraži</string>
+  <string name="aiSearch_support_service_search_aiSearch">Pretraži s AI za preciznije rezultate</string>
+  <string name="aiSearch_support_service_search_aiSearch_global">Pretraživač aplikacija</string>
   <string name="aiSearch_buildDB_dialog_analysis_completed_progress">%1$s dovršeno</string>
   <string name="aiSearch_buildDB_dialog_analysis_completed_progress_stop">Analiza je %1$s dovršena i trenutno je pauzirana</string>
   <string name="aiSearch_buildDB_dialog_analysis_notice_four">Ovaj će proces započeti kada se uređaj ohladi i ima dovoljno energije</string>
@@ -381,6 +393,12 @@
   <string name="dist_compute_download_guidance_content">Preuzmite potrebne velike modele na svoj uređaj kako biste mogli koristiti podršku za računalstvo. Preuzeti sada?</string>
   <string name="dist_compute_download_guidance_title">Preuzmi veliki model</string>
   <string name="dist_compute_download_now">Preuzimanje</string>
+  <string name="dist_compute_download_again_reminder">"Model nije preuzet. Pokušajte ponovno."</string>
+  <string name="dist_compute_download_reminder_content">Instalirajte veliki model na uređaju kako biste mogli koristiti ovu značajku. Instalirati odmah?</string>
+  <string name="dist_compute_download_reminder_modelmanager">Preuzmite i instalirajte veliki model na uređaju kako biste mogli koristiti značajke umjetne inteligencije na svom uređaju. Preuzeti odmah?</string>
+  <string name="dist_compute_download_reminder_title">Instalirajte veliki model na uređaju</string>
+  <string name="dist_compute_summary_dist">Osnažite značajke umjetne inteligencije uz podršku obližnjih uređaja</string>
+  <string name="dist_compute_summary_local">Pomozite u osnaživanju značajki umjetne inteligencije na obližnjim uređajima</string>
   <string name="dist_compute_pad_already_connected">Povezano: %1$s</string>
   <string name="dist_compute_pad_button_neutral">Razumijem</string>
   <string name="dist_compute_pad_notification_content">Power AI značajke uz podršku uređaja u blizini</string>
@@ -415,6 +433,7 @@
   <string name="focus_hypermind_operation_metro_info">Stigli ste %1$s, možete otvoriti šifru za ukrcaj za ulazak i izlazak sa postaje.</string>
   <string name="focus_hypermind_operation_success">uspjeh</string>
   <string name="focus_metro_code">Kôd za ukrcaj</string>
+  <string name="focus_metro_info">Došli ste do %1$s, možete otvoriti kod za ukrcaj kako biste ušli i izašli iz stanice.</string>
   <string name="focus_network_error">Mrežna pogreška</string>
   <string name="focus_operate_failed">Nešto nije u redu</string>
   <string name="focus_operate_hm_code_1">Druga strana je obrađena</string>
@@ -432,6 +451,9 @@
   <string name="focus_weather_button">Pogledajte opcije putovanja</string>
   <string name="focus_weather_context">%1$s počinje %2$s</string>
   <string name="focus_weather_title">%1$s je tijekom razdoblja putovanja na posao, preporučuje se da krenete ranije, ne zaboravite ponijeti opremu za kišu i pripazite na sigurnost tijekom putovanja</string>
+  <string name="focus_take_medicine_done">Gotovo</string>
+  <string name="focus_take_medicine_igonore">Ignorirano</string>
+  <string name="form_action_partial_fill_failed">Popunjen dio sadržaja obrasca</string>
   <string name="form_action_fill_failed">"Nije moguće ispuniti. Pričekajte minutu ili dvije i pokušajte ponovno."</string>
   <string name="friday">Petak</string>
   <string name="friday_short">Pet</string>
@@ -479,8 +501,10 @@
   <string name="miuix_appcompat_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_select_all_description">Odaberi sve</string>
   <string name="miuix_appcompat_select_item">Odaberi stavke</string>
+  <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_popup_window_default_title">Skočni prozor</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshing">Osvježavanje</string>
@@ -715,6 +739,7 @@
   <string name="passport_request_gallery_permission_message">Dopusti pristup Galeriji:&lt;br /&gt;Za postavljanje profilnih fotografija</string>
   <string name="passport_resend_email_reach_limit_message">"Zatražili ste previše e-poruka za potvrdu. Uvjerite se da e-poruka za potvrdu nije u mapi neželjene pošte vaše pristigle pošte."</string>
   <string name="passport_resend_email_reach_limit_title">Previše pokušaja</string>
+  <string name="passport_request_permission_title">Potrebna su dopuštenja</string>
   <string name="passport_resend_ticket">Ponovo pošalji kod</string>
   <string name="passport_retry">Pokušajte ponovno</string>
   <string name="passport_same_new_and_old_pwd">"Ne može biti ista kao trenutna zaporka"</string>
@@ -732,20 +757,21 @@
   <string name="passport_talkback_switch_voice_captcha">Prebaci se na glasovni kontrolni kod</string>
   <string name="passport_talkback_voice_captcha">Reprodukcija koda za glasovnu potvrdu</string>
   <string name="passport_ticket_send_by_second">Pošalji za %d</string>
+  <string name="passport_third_sns_service_unavailable">"Usluga nije dostupna. Provjerite je li aplikacija instalirana i nije li blokirana."</string>
   <string name="passport_to_forget_password">Zaboravili ste zaporku?</string>
   <string name="passport_to_password_login">Prijavite se lozinkom</string>
   <string name="passport_to_verify_code_login">Prijavite se SMS-om</string>
   <string name="passport_unknown_error">Nepoznata pogreška</string>
   <string name="passport_unknown_host_network_error">Provjerite mrežne postavke i pokušajte ponovno</string>
-  <string name="passport_user_agreement_hint_3rd_app">&lt;Data&gt;"Pro&amp;#269;itao sam i prihva&amp;#263;am &amp;lt;a href=%1$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%2$s&amp;gt;Pravila o privatnosti&amp;lt;/ a&amp;gt; i &amp;lt;a href=%3$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%4$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt; Xiaomi ra&amp;#269;una."&lt;/Data&gt;</string>
-  <string name="passport_user_agreement_hint_3rd_app_mobile">&lt;Data&gt;"Pro&amp;#269;itao sam i prihva&amp;#263;am &amp;lt;a href=%1$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%2$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, Xiaomi ra&amp;#269;una &amp;lt;a href=%3$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%4$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, kao i &amp;lt;a href=%5$s&amp;gt;Terms and conditions of China Mobile verification services&amp;lt;/a&amp;gt;."&lt;/Data&gt;</string>
-  <string name="passport_user_agreement_hint_3rd_app_with_telecom">&lt;Data&gt;"Pro&amp;#269;itao sam i prihva&amp;#263;am &amp;lt;a href=%1$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%2$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, Xiaomi ra&amp;#269;una &amp;lt;a href=%3$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%4$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, kao i &amp;lt;a href=%5$s&amp;gt;Terms and conditions of eSurfing account verification services&amp;lt;/a&amp;gt;."&lt;/Data&gt;</string>
-  <string name="passport_user_agreement_hint_3rd_app_with_unicom">&lt;Data&gt;"Pro&amp;#269;itao sam i prihva&amp;#263;am &amp;lt;a href=%1$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%2$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, Xiaomi ra&amp;#269;una &amp;lt;a href=%3$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%4$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, kao i &amp;lt;a href=%5$s&amp;gt;Terms and conditions of China Unicom verification services&amp;lt;/a&amp;gt;."&lt;/Data&gt;</string>
-  <string name="passport_user_agreement_hint_default">&lt;Data&gt;"Pro&amp;#269;itao sam i prihva&amp;#263;am &amp;lt;a href=%1$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%2$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;."&lt;/Data&gt;</string>
-  <string name="passport_user_agreement_hint_first_login">"Automatski ćemo izraditi račun ako svoj telefonski broj koristite prvi put."</string>
-  <string name="passport_user_agreement_hint_with_mobile">&lt;Data&gt;"Pro&amp;#269;itao sam i prihva&amp;#263;am &amp;lt;a href=%1$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%2$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, kao i &amp;lt;a href=%3$s&amp;gt;Uvjeti i odredbe usluga verifikacije tvrtke China Mobile&amp;lt;/a&amp;gt;."&lt;/Data&gt;</string>
-  <string name="passport_user_agreement_hint_with_telecom">&lt;Data&gt;"Pro&amp;#269;itao sam i prihva&amp;#263;am &amp;lt;a href=%1$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%2$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, kao i &amp;lt;a href=%3$s&amp;gt;Uvjeti i odredbe usluga verifikacije ra&amp;#269;una eSurfing&amp;lt;/a&amp;gt;."&lt;/Data&gt;</string>
-  <string name="passport_user_agreement_hint_with_unicom">&lt;Data&gt;"Pro&amp;#269;itao sam i prihva&amp;#263;am &amp;lt;a href=%1$s&amp;gt;Korisni&amp;#269;ki ugovor&amp;lt;/a&amp;gt; i &amp;lt;a href=%2$s&amp;gt;Pravila o privatnosti&amp;lt;/a&amp;gt;, kao i &amp;lt;a href=%3$s&amp;gt;Uvjeti i odredbe usluga provjere China Unicom&amp;lt;/a&amp;gt;."&lt;/Data&gt;</string>
+  <string name="passport_user_agreement_hint_3rd_app"><Data>"Pročitao sam i prihvaćam &lt;a href=%1$s>Korisnički ugovor&lt;/a> i &lt;a href=%2$s>Pravila o privatnosti&lt;/a> i Xiaomi račun &lt;a href=%3$s>Korisnički ugovor&lt;/a> i &lt;a href=%4$s>Pravila o privatnosti&lt;/a>."</Data></string>
+  <string name="passport_user_agreement_hint_3rd_app_mobile"><Data>"Pročitao sam i prihvaćam &lt;a href=%1$s>Korisnički ugovor&lt;/a> i &lt;a href=%2$s>Pravila o privatnosti&lt;/a>, Xiaomi račun &lt;a href=%3$s>Korisnički ugovor&lt;/a> i &lt;a href=%4$s>Pravila o privatnosti&lt;/a>, kao i &lt;a href=%5$s>Terms and conditions of China Mobile verification services&lt;/a>."</Data></string>
+  <string name="passport_user_agreement_hint_3rd_app_with_telecom"><Data>"Pročitao sam i prihvaćam &lt;a href=%1$s>Korisnički ugovor&lt;/a> i &lt;a href=%2$s>Pravila o privatnosti&lt;/a>, Xiaomi račun &lt;a href=%3$s>Korisnički ugovor&lt;/a> i &lt;a href=%4$s>Pravila o privatnosti&lt;/a>, kao i &lt;a href=%5$s>Terms and conditions of eSurfing account verification services&lt;/a>."</Data></string>
+  <string name="passport_user_agreement_hint_3rd_app_with_unicom"><Data>"Pročitao sam i prihvaćam &lt;a href=%1$s>Korisnički ugovor&lt;/a> i &lt;a href=%2$s>Pravila o privatnosti&lt;/a>, Xiaomi račun &lt;a href=%3$s>Korisnički ugovor&lt;/a> i &lt;a href=%4$s>Pravila o privatnosti&lt;/a>, kao i &lt;a href=%5$s>Terms and conditions of China Unicom verification services&lt;/a>."</Data></string>
+  <string name="passport_user_agreement_hint_default"><Data>"Pročitao sam i prihvaćam Xiaomi račun &lt;a href=%1$s>Korisnički ugovor&lt;/a> i &lt;a href=%2$s>Pravila o privatnosti&lt;/a>."</Data></string>
+  <string name="passport_user_agreement_hint_first_login">"Automatski ćemo kreirati račun ako prvi put koristite svoj telefonski broj."</string>
+  <string name="passport_user_agreement_hint_with_mobile"><Data>"Pročitao sam i prihvaćam Xiaomi račun &lt;a href=%1$s>Korisnički ugovor&lt;/a> i &lt;a href=%2$s>Pravila o privatnosti&lt;/a>, kao i &lt;a href=%3$s>Terms and conditions of China Mobile verification services&lt;/a>."</Data></string>
+  <string name="passport_user_agreement_hint_with_telecom"><Data>"Pročitao sam i prihvaćam Xiaomi račun &lt;a href=%1$s>Korisnički ugovor&lt;/a> i &lt;a href=%2$s>Pravila o privatnosti&lt;/a>, kao i &lt;a href=%3$s>Terms and conditions of eSurfing account verification services&lt;/a>."</Data></string>
+  <string name="passport_user_agreement_hint_with_unicom"><Data>"Pročitao sam i prihvaćam Xiaomi račun &lt;a href=%1$s>Korisnički ugovor&lt;/a> i &lt;a href=%2$s>Pravila o privatnosti&lt;/a>, kao i &lt;a href=%3$s>Terms and conditions of China Unicom verification services&lt;/a>."</Data></string>
   <string name="passport_user_avatar_update_title">Promjena fotografije profila</string>
   <string name="passport_user_avatar_uploading">Samo trenutak…</string>
   <string name="passport_user_id_hint">E-mail/broj telefona/ID Xiaomi računa</string>
